Implement sorting for dueDate and Priority